# DJSW_collaborative_coding

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  Makefile  README.html  README.md  WMLP.html  about.html  dennis.html  genindex.html  index.html  johannes.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sigurd.html
.doctrees/: README.doctree  WMLP.doctree  about.doctree  dennis.doctree  environment.pickle  index.doctree  johannes.doctree  sigurd.doctree
.doctrees/autoapi/: index.doctree
.doctrees/pages/: about.doctree  getting-started.doctree
.github/workflows/: automatic-testing.yml  sphinx-builder.yml
DJSW/: eval.py  evaluate.py  main.py  run.sh  train.py
_sources/: README.md.txt  about.md.txt  johannes.md.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/DJSW/: index.html
autoapi/create_mnist_dataset/: index.html
autoapi/dataset_mnist03_h5/: index.html
autoapi/dmlp/: index.html
autoapi/download_prepare_mnist03/: index.html
autoapi/mnist_dataset/: index.html
datasetprep/: create_mnist_dataset.py  download_prepare_mnist03.py
docs/: README.md  WMLP.md  about.md  conf.py  dennis.md  index.md  johannes.md  mkdocs.yml  requirement-docs.txt  requirements-docs.txt  sigurd.md
models/: dmlp.py  smlp.py
pages/: about.html  getting-started.html
reports/: slurm-14077470.out
src/: eval.py  main.py  run.sh  train.py
tests/: test_data.py  test_dataset_Sigurd.py  test_dataset_d.py  test_evaluation_metrics.py
utils/: dataset_mnist03_h5.py  mnist_dataset.py  wdataloader.py
(+68 files in other folders)
