[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "DJSW"
version = "0.0.1"
description = "Efficient Lumi-friendly ML Pipeline"
authors = [
  { name = "DJSW" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"
dependencies = [
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "ConfigArgParse>=1.7.1",
    "h5py>=3.15.1",
    "hdf5plugin>=6.0.0",
    "pathlib>=1.0.1",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "ruff>=0.6",
]


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.uv]
# uv already defaults to .venv; this just documents intent
package = true
